<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/img_play"
        android:layout_width="121dp"
        android:layout_height="90dp"
        android:src="@drawable/header_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/head_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_head"
        android:textSize="@dimen/tv22sp"
        app:layout_constraintLeft_toRightOf="@id/img_play"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/head_sec_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvDeskripsi"
        android:textSize="@dimen/tv15sp"
        app:layout_constraintLeft_toRightOf="@+id/img_play"
        app:layout_constraintTop_toBottomOf="@+id/head_title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvBuilder"
        app:layout_constraintLeft_toRightOf="@+id/img_play"
        app:layout_constraintTop_toBottomOf="@+id/head_sec_title" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_play" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_default"
        android:text="@string/btn_menu1"
        android:textSize="@dimen/tv12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_default"
        android:text="@string/btn_2"
        android:textSize="@dimen/tv12sp"
        app:layout_constraintLeft_toRightOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_default"
        android:text="@string/btn_menu3"
        android:textSize="@dimen/tv12sp"
        app:layout_constraintLeft_toRightOf="@id/btn_2"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_default"
        android:text="@string/btn_menu4"
        android:textSize="@dimen/tv12sp"
        app:layout_constraintLeft_toRightOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_2" />


</androidx.constraintlayout.widget.ConstraintLayout>