<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/space_default"
    android:background="#A3FFFFFF"
    >

    <View
        android:id="@+id/content1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_content"
        android:background="#2196F3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTarget_1"
        app:layout_constraintTop_toTopOf="@+id/content1"
        app:layout_constraintLeft_toRightOf="@id/img1"
        android:textSize="@dimen/tv22sp"
        android:layout_margin="@dimen/space_default"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/img1"
        android:layout_width="@dimen/img60dp"
        android:layout_marginEnd="@dimen/space_default"
        android:src="@drawable/play_body"
        android:layout_height="@dimen/height_content"
        app:layout_constraintStart_toStartOf="@+id/content1"
        app:layout_constraintTop_toTopOf="@+id/content1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlePercent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintLeft_toRightOf="@id/img1"
        android:textSize="@dimen/tv12sp"
        android:layout_margin="@dimen/space_default"
        android:textStyle="bold"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/content1"
        app:layout_constraintTop_toTopOf="@+id/content1"
        app:layout_constraintLeft_toRightOf="@+id/img1"
        />



    <View
        android:id="@+id/content2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_content"
        android:background="#2196F3"
        app:layout_constraintTop_toBottomOf="@id/content1"
        android:layout_marginTop="@dimen/space_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTarget_2"
        app:layout_constraintTop_toTopOf="@+id/content2"
        app:layout_constraintLeft_toRightOf="@id/img2"
        android:textSize="@dimen/tv22sp"
        android:layout_margin="@dimen/space_default"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/img2"
        android:layout_width="@dimen/img60dp"
        android:layout_marginEnd="@dimen/space_default"
        android:src="@drawable/play_body"
        android:layout_height="@dimen/height_content"
        app:layout_constraintStart_toStartOf="@+id/content2"
        app:layout_constraintTop_toTopOf="@+id/content2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlePercent"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintLeft_toRightOf="@id/img2"
        android:textSize="@dimen/tv12sp"
        android:layout_margin="@dimen/space_default"
        android:textStyle="bold"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/content2"
        app:layout_constraintTop_toTopOf="@+id/content2"
        app:layout_constraintLeft_toRightOf="@+id/img2"
        />



    <View
        android:id="@+id/content3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_content"
        android:background="#2196F3"
        app:layout_constraintTop_toBottomOf="@id/content2"
        android:layout_marginTop="@dimen/space_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/line3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleTarget_3"
        app:layout_constraintTop_toTopOf="@+id/content3"
        app:layout_constraintLeft_toRightOf="@id/img3"
        android:textSize="@dimen/tv22sp"
        android:layout_margin="@dimen/space_default"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/img3"
        android:layout_width="@dimen/img60dp"
        android:layout_marginEnd="@dimen/space_default"
        android:src="@drawable/play_body"
        android:layout_height="@dimen/height_content"
        app:layout_constraintStart_toStartOf="@+id/content3"
        app:layout_constraintTop_toTopOf="@+id/content3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlePercent"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintLeft_toRightOf="@id/img3"
        android:textSize="@dimen/tv12sp"
        android:layout_margin="@dimen/space_default"
        android:textStyle="bold"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/content3"
        app:layout_constraintTop_toTopOf="@+id/content3"
        app:layout_constraintLeft_toRightOf="@+id/img3"
        />




</androidx.constraintlayout.widget.ConstraintLayout>